fix: Prevent tooltips from displaying out of screen's bounds

--- a/src/app/components/tooltip/tooltip.component.scss
+++ b/src/app/components/tooltip/tooltip.component.scss
@@ -1,12 +1,10 @@
 @import 'styles/abstracts/variables';
 
-$arrow-height: 3px;
-$arrow-semi-width: 4px;
-
 .tooltip {
   position: fixed;
-  color: white;
+  z-index: 100;
   background-color: $lcc-color--bg-tooltip;
+  color: white;
   border-radius: $lcc-border-radius--lg;
   padding: $lcc-space--xs $lcc-space--sm;
   margin-top: $lcc-space--sm;
@@ -14,24 +12,10 @@ $arrow-semi-width: 4px;
   animation: tooltip-slide 0.5s;
   pointer-events: none;
   font-size: $h5;
-  z-index: 100;
   line-height: 1.2em;
   text-align: center;
-  max-width: 120px;
-
-  &::before {
-    content: '';
-    width: 0;
-    height: 0;
-    border-left: $arrow-semi-width solid transparent;
-    border-right: $arrow-semi-width solid transparent;
-    border-bottom: $arrow-height solid $lcc-color--bg-tooltip;
-    position: absolute;
-    left: calc(50% - #{$arrow-semi-width});
-    top: -$arrow-height;
-  }
+  word-wrap: break-word;
 }
-
 
 @keyframes tooltip-slide {
   0% {
